Fix more spacing errors in css

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ div {
   .third {
     width: 100%;
     position: absolute;
-    top: 4.7em;
+    top: 4.8em;
   }
 
 }
